variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: value =! is not a member of Int
while (2 * biscuits =! caseOrange + 1){
                    ^