variables.RunHalf.scala.code
var biscuits = 0
var caseOrange = 0
while (2 * biscuits =! caseOrange + 1){
  avance()
  if (estSurBiscuit()){
    biscuits = biscuits + 1
  if (estSurOrange()){
    caseOrange = caseOrange + 1
  }
  } 
}